Fix list item dot on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
   }
 
   .dot {
-    @apply flex justify-center items-center rounded-full font-bold w-7 h-7 mr-2;
+    @apply flex justify-center items-center rounded-full font-bold p-3 w-7 h-7 mr-2;
   }
 
   .link {
